--- a/web/src/flow/FlowExecutor.css
+++ b/web/src/flow/FlowExecutor.css
@@ -15,24 +15,35 @@
 
 [part="locale-select"] {
     --ak-c-flow-executor__locale-select--Padding: var(--pf-global--spacer--md);
+    --ak-c-flow-executor__locale-select--Color: var(--pf-global--Color--light-100);
+    --ak-c-flow-executor__locale-select--Color--hover: var(--pf-global--primary-color--dark-100);
+    --ak-c-locale-select--label--Color: var(--ak-c-flow-executor__locale-select--Color);
 
-    position: absolute;
-    inset-block-start: var(--ak-c-flow-executor__locale-select--Padding);
-    inset-inline-start: var(--ak-c-flow-executor__locale-select--Padding);
-    z-index: 100;
+    /* Compatibility mode */
+    & {
+        color: var(--ak-c-flow-executor__locale-select--Color);
+        position: absolute;
+        inset-block-start: var(--ak-c-flow-executor__locale-select--Padding);
+        inset-inline-start: var(--ak-c-flow-executor__locale-select--Padding);
+        font-weight: 500;
+        z-index: 100;
+    }
 
-    color: var(--pf-global--Color--light-100);
-
-    /* Browser compatibility */
+    /* Slight differences in browser hover states. */
     &:has(select:hover),
     &:hover {
-        background-color: var(
-            --ak-c-flow-executor__locale-select--BackgroundColor--hover,
-            transparent
+        --ak-c-locale-select--label--Color: var(--ak-c-flow-executor__locale-select--Color--hover);
+        --ak-c-locale-select--BackgroundColor: var(
+            --ak-c-flow-executor__locale-select--BackgroundColor--hover
         );
+        --ak-c-locale-select__after--Opacity: 1;
+        --ak-c-locale--select--OutlineColor: currentColor;
+
+        color: var(--ak-c-flow-executor__locale-select--Color--hover);
     }
 
     &::part(select) {
+        color: var(--ak-c-flow-executor__locale-select--Color);
     }
 
     filter: var(--ak-global--background-contrast-Filter);
@@ -41,17 +52,18 @@
 
     /* At least a third of the card cut-off is available. */
     @media (width <= 61.25rem) and (height <= 61.25rem) {
-        color: var(--ak-global--background-contrast);
-        filter: none;
+        --ak-global--background-contrast-Filter: none;
+        --ak-c-flow-executor__locale-select--Color: var(--ak-global--background-contrast);
 
         grid-area: main;
     }
 
     @media (width <= 61.25rem) and (height <= 61.25rem) and (not (prefers-contrast: more)) {
-        --ak-c-flow-executor__locale-select--select--Opacity: 0;
+        --ak-c-locale-select--Opacity: 0;
 
         &:hover {
-            --ak-c-flow-executor__locale-select--select--Opacity: 1;
+            --ak-c-locale-select--Opacity: 1;
+            --ak-c-locale-select__after--Opacity: 1;
         }
     }
 
@@ -64,10 +76,5 @@
     /* Card is fully masked to mobile background. */
     @media (width <= 35rem) {
         grid-row: header;
-    }
-
-    /* An awkward but possible layout when on mobile landscape. */
-    @media (height <= 35rem) or (width <= 52.5rem) {
-        --ak-c-flow-executor__locale-select--BackgroundColor--hover: transparent;
     }
 }
